# Aekasarn

./: README.md  com.winscloud.Aekasarn.json  meson.build
data/: com.winscloud.Aekasarn.desktop.in  com.winscloud.Aekasarn.gschema.xml  com.winscloud.Aekasarn.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: aekasarn-application.c  aekasarn-application.h  aekasarn-window.c  aekasarn-window.h  aekasarn-window.ui  aekasarn.gresource.xml  main.c  meson.build
